-added excluded categories based on the categorizer results -added a fix to clear up gpt2 prompt output -fixed dependency issues

--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,7 +1,7 @@
 Django~=4.2.6
 requests~=2.31.0
-spacy~=3.7.0
-scispacy~=0.5.4
+spacy~=3.7.0 --prefer-binary
+scispacy~=0.6.2
 
 # LLM dependencies (optional, install based on which LLM you want to use)
 # For paid APIs:
@@ -11,6 +11,8 @@ scispacy~=0.5.4
 # For free local models (recommended):
 langchain-huggingface>=0.0.1  # For HuggingFace models
 langchain-community>=0.0.1  # For Ollama and other local models
-transformers>=4.35.0  # Required by HuggingFace models
-torch>=2.0.0  # Required by HuggingFace models
-accelerate>=0.24.0  # Speeds up model loading
+# Required by HuggingFace models
+transformers>=4.35.0
+torch>=2.0.0
+# Speeds up model loading
+accelerate>=0.24.0
