--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -2,6 +2,7 @@ Django~=4.2.6
 requests~=2.32.5
 spacy~=3.7.0 --prefer-binary
 scispacy~=0.6.2
+python-decouple~=3.8
 
 # LLM dependencies (optional, install based on which LLM you want to use)
 # For paid APIs:
