-added missing migration after changing field length -upgraded isort and configured pyproject to support proper python version -added postgresql DB and config -added Makefile to prepare-venv, create-migrations and migrate

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,2 +1,10 @@
 SECRET_KEY="django-insecure-9wy9w#vf^tde0262doyy_j19=64c()_qub!1)f+fh-b^=7ndw*"
 WIKIPEDIA_CONTACT_EMAIL=my@email.com
+
+# DB
+USE_POSTGRES=True
+POSTGRES_DB=mathsdb
+POSTGRES_USER=mathsuser
+POSTGRES_PASSWORD=mathspass
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
